# aoc-2024

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
