[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
coordinates = "0.3.1"
derive_more = { version = "1.0.0", features = ["display", "debug"] }
dhat = { version = "0.3.3", optional = true }
glam = "0.29.2"
itertools = "0.13.0"
nom = "7.1.3"
pathfinding = "4.12.0"
pico-args = "0.5.0"
regex = "1.11.1"
tinyjson = "2.5.1"

# Solution dependencies
